# planet-nicfi

./: .gitignore  CHANGELOG.md  Makefile  README-template.md  README.md  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
examples/: collection.json  item.json
scripts/: lint
src/azure/: .gitignore  docker-compose.yml  pyproject.toml
src/azure/etl/: README.md  docker-compose.yml  etl.py  quads.py  test_planet_nicfi_etl.py
src/azure/stactools_nicfi_etl/: __init__.py  core.py  etl.py  quads.py
src/azure/tests/: test_planet_nicfi_etl.py
src/stactools/planet_nicfi/: __init__.py  commands.py  etl.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
