[metadata]
name = stactools-planet-nicfi
version = attr: stactools.planet_nicfi.__version__
description = stactools package for Planet NICFI data.
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/planet-nicfi
project_urls =
    Documentation = https://stactools-planet-nicfi.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/planet-nicfi/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.2.6
    rio-stac
    requests
    pandas
    pystac
    pytest
    black

[options.packages.find]
where = src
